@@ -21,7 +21,7 @@ The following classes have been renamed:
 - none
 
 The following methods have been added:
-- none
+- gammalib::plaw_integral
 
 The following methods have been removed:
 - none
@@ -68,7 +68,8 @@ None
 
 9. Numerics module
 ------------------
-None
+The gammalib::plaw_integral() function has been added to compute the area under
+a power law between two boundaries.
 
 
 10. Observation module
